Attempt to prevent sticky hover styles on mobile

--- a/style.css
+++ b/style.css
@@ -171,10 +171,6 @@ body {
     background-color: #aaa;
 }
 
-.project-page-slideshow-button:hover .project-page-slideshow-button-circle {
-    opacity: 0.5;
-}
-
 .project-page-slideshow-button-text {
     position: absolute;
     color: #eee;
@@ -183,10 +179,17 @@ body {
     font-size: 1.75em;
 }
 
-.project-page-slideshow-button:hover .project-page-slideshow-button-text {
-    opacity: 1;
-}
+@media (hover: hover) {
 
+    .project-page-slideshow-button:hover .project-page-slideshow-button-circle {
+        opacity: 0.5;
+    }
+
+    .project-page-slideshow-button:hover .project-page-slideshow-button-text {
+        opacity: 1;
+    }
+
+}
 .project-page-slideshow-button-text-left {
     left: 0.59em;
 }
